--- a/index.html
+++ b/index.html
@@ -14,20 +14,27 @@
         <form id="birthday-form">
             <div class="container">
                 <div class="label">
-                    <label for="birthday-input">Crewmate Or Imposter?</label>
+                    <label for="birthday-input">CREWMATE OR IMPOSTER?</label>
                 </div>
                 <div class="form-one">
                     <input id="birthday-input" type="date" name="birthday" placeholder="MM/DD/YYYY" required>
                 </div>
                 <div class="form-one">
-                    <button id="submit">Submit</button>
+                    <button id="submit">SUBMIT</button>
                 </div>
             </div>
-        
         </form>
-
     </header>
-    <main>
+    <main id="main">
+        <div id="main-container">
+            <button id="white" class="crewmate">
+                <img src="images/white.svg" alt="white crewmate">
+            </button>
+            <button id="white" class="crewmate">
+                <img src="images/white.svg" alt="white crewmate">
+            </button>
+        </div>
+
     </main>
 </body>
 
