--- a/index.html
+++ b/index.html
@@ -26,12 +26,42 @@
         </form>
     </header>
     <main id="main">
-        <div id="main-container">
-            <button id="white" class="crewmate">
-                <img src="images/white.svg" alt="white crewmate">
+        <div id="mainContainer">
+            <button id="orange" class="crewmate">
+                <img src="images/orange.svg" alt="orange crewmate" width="100" height="100">
             </button>
             <button id="white" class="crewmate">
-                <img src="images/white.svg" alt="white crewmate">
+                <img src="images/white.svg" alt="white crewmate" width="100" height="100">
+            </button>
+            <button id="pink" class="crewmate">
+                <img src="images/pink.svg" alt="pink crewmate" width="100" height="100">
+            </button>
+            <button id="blue" class="crewmate">
+                <img src="images/blue.svg" alt="blue crewmate" width="100" height="100">
+            </button>
+            <button id="brown" class="crewmate">
+                <img src="images/brown.svg" alt="brown crewmate" width="100" height="100">
+            </button>
+            <button id="lime" class="crewmate">
+                <img src="images/lime.svg" alt="lime crewmate" width="100" height="100">
+            </button>
+            <button id="black" class="crewmate">
+                <img src="images/black.svg" alt="black crewmate" width="100" height="100">
+            </button>
+            <button id="yellow" class="crewmate">
+                <img src="images/yellow.svg" alt="yellow crewmate" width="100" height="100">
+            </button>
+            <button id="green" class="crewmate">
+                <img src="images/green.svg" alt="green crewmate" width="100" height="100">
+            </button>
+            <button id="purple" class="crewmate">
+                <img src="images/purple.svg" alt="purple crewmate" width="100" height="100">
+            </button>
+            <button id="cyan" class="crewmate">
+                <img src="images/cyan.svg" alt="cyan crewmate" width="100" height="100">
+            </button>
+            <button id="red" class="crewmate">
+                <img src="images/red.svg" alt="red crewmate" width="100" height="100">
             </button>
         </div>
 
