Working on Card Description
Currently still exploring the circular layout I want to achieve but having difficulties therefore going to set up the description card first to see.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </form>
     </header>
     <main id="main">
-        <div id="mainContainer">
+        <div class="mainContainer">
             <button id="orange" class="crewmate">
                 <img src="images/orange.svg" alt="orange crewmate" width="100" height="100">
             </button>
