--- a/circle.html
+++ b/circle.html
@@ -12,6 +12,8 @@
 <body>
     <main>
         <div class="cardContainer">
+            <a href="index.html" class="previous">&#8249;</a>
+            <a href="index.html" class="next">&#8250;</a>
             <img src="images/red_card.svg" width="200" height="200" alt="Red Card">
             <h2><b>Red</b></h2>
             <h3>December 22 - January 19</h3>
@@ -19,23 +21,8 @@
                 being the most suspicious contender for Imposter. There is a myth going around that Red might have been
                 the real Imposter all this time.</p>
         </div>
+        
 
-
-
-       <!-- <div class="cardImage">
-            <img src="images/red_card.svg" width="150" height="150" alt="Red Card">
-            <div class="cardContainer">
-                <h2><b>Red</b></h2>
-                <h3>December 22 - January 19</h3>
-                <p>Red tends to be the most intelligent one out of all the colors since this Crewmate has a long history
-                    of
-                    being the most suspicious contender for Imposter. There is a myth going around that Red might have
-                    been
-                    the real Imposter all this time.</p>
-            </div>
-        </div>
-
-    -->
     </main>
 
 </body>
