--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +25,7 @@
             </div>
         </form>
     </header>
+
     <main id="main">
         <div class="mainContainer">
             <button id="orange" class="crewmate">
@@ -64,8 +65,8 @@
                 <img src="images/red.svg" alt="red crewmate" width="100" height="100">
             </button>
         </div>
-
     </main>
+
 </body>
 
 </html>
