--- a/test.html
+++ b/test.html
@@ -9,32 +9,105 @@
     <link rel="stylesheet" href="css/test.css">
 </head>
 
+
 <body>
     <div class="wrap">
         <div class="cell"></div>
-        <div class="cell">2</div>
-        <div class="cell">3</div>
-        <div class="cell">4</div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/orange.svg" alt="orange" width="30" height="30">
+                </a>
+            </button>
+        </div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/white.svg" alt="white" width="30" height="30">
+                </a>
+            </button>
+        </div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/pink.svg" alt="pink" width="30" height="30">
+                </a>
+            </button>
+        </div>
         <div class="cell"></div>
-        <div class="cell">6</div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/red.svg" alt="red" width="30" height="30">
+                </a>
+            </button>
+        </div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">10</div>
-        <div class="cell">11</div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/blue.svg" alt="blue" width="30" height="30">
+                </a>
+            </button>
+        </div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/cyan.svg" alt="cyan" width="30" height="30">
+                </a>
+            </button>
+        </div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">15</div>
-        <div class="cell">16</div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/brown.svg" alt="brown" width="30" height="30">
+                </a>
+            </button>
+        </div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/purple.svg" alt="purple" width="30" height="30">
+                </a>
+            </button>
+        </div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">20</div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/green.svg" alt="green" width="30" height="30">
+                </a>
+            </button>
+        </div>
         <div class="cell"></div>
-        <div class="cell">22</div>
-        <div class="cell">23</div>
-        <div class="cell">23</div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/lime.svg" alt="lime" width="30" height="30">
+                </a>
+            </button>
+        </div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/yellow.svg" alt="yellow" width="30" height="30">
+                </a>
+            </button>
+        </div>
+        <div class="cell">
+            <button>
+                <a href="circle.html">
+                    <img src="images/black.svg" alt="black" width="30" height="30">
+                </a>
+            </button>
+        </div>
         <div class="cell"></div>
     </div>
     <!--
