--- a/circle.html
+++ b/circle.html
@@ -14,7 +14,7 @@
         <div class="cardContainer">
             <a href="index.html" class="previous">&#8249;</a>
             <a href="index.html" class="next">&#8250;</a>
-            <img src="images/red_card.svg" width="200" height="200" alt="Red Card">
+            <img src="images/red_card.svg" class="card" width="200" height="200" alt="Red Card">
             <h2><b>Red</b></h2>
             <h3>December 22 - January 19</h3>
             <p>Red tends to be the most intelligent one out of all the colors since this Crewmate has a long history of
