--- a/test.html
+++ b/test.html
@@ -7,10 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/test.css">
+    <script src="main.js" defer></script>
 </head>
 
 
 <body>
+    <main>
+        <!--Modal Test-->
+        <button id="myBtn">Open Modal</button>
+
+        <div id="myModal" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+            </div>
+        </div>
+        
+    </main>
     <div class="wrap">
         <div class="cell"></div>
         <div class="cell">
