Finished modals and buttons
Completed calendar input --> now onto finalizing the sounds.

--- a/index.html
+++ b/index.html
@@ -42,10 +42,24 @@
         </div>
        
         <div id="display" src="images/background.png" alt="blank"></div>
-        <div>
-            <button class="zButton" id="white"></button>
-            <button class="zButton" id="black"></button>
-            <button class="zButton" id="yellow"></button>
+        <div class="column">
+            <div class="row">
+                <button class="zButton" id="white"></button>
+                <button class="zButton" id="black"></button>
+                <button class="zButton" id="yellow"></button>
+                <button class="zButton" id="purple"></button>
+                <button class="zButton" id="pink"></button>
+                <button class="zButton" id="cyan"></button>
+            </div>
+            <div class="row">
+                <button class="zButton" id="lime"></button>
+                <button class="zButton" id="red"></button>
+                <button class="zButton" id="orange"></button>
+                <button class="zButton" id="green"></button>
+                <button class="zButton" id="brown"></button>
+                <button class="zButton" id="blue"></button>
+            </div>
+        
         </div>
 
         <!--Modal-->
