--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie-edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Among Us Zodiac</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -28,7 +29,7 @@
         <audio id="rejected" src="sounds/rejected.mp3" preload="auto"></audio>
         <audio id="scan" src="sounds/scan.mp3" preload="auto"></audio>
         <audio id="death" src="sounds/death.mp3" preload="auto"></audio>
-        <audio id="vote" src="sounds/vote.mp3" preoload="auto"></audio>
+        <audio id="vote" src="sounds/vote.mp3" preload="auto"></audio>
         
 
 
@@ -40,8 +41,8 @@
                 <p><button id="submit">Submit</button></p>
             </div>
         </div>
-       
-        <div id="display" src="images/background.png" alt="blank"></div>
+
+        <div id="display" src="images/background.png"></div>
 
         <div class="column">
             <div class="row">
@@ -84,7 +85,7 @@
         </div>
 
     </main>
-    <script type="text/javascript" src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
