--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
         <audio id="emergencyMeet" src="sounds/emergencyMeet.mp3" preload="auto"></audio>
 
         <div id="wrapper">
-            <div id="userinfo">
-                <p><input id="bday" type="date"></p>
-                <p><button id="submit">Submit</button></p>
-            </div>
+                <input id="bday" type="date">
+                <button id="submit">Submit</button>
         </div>
 
         <div id="display" src="images/background.png"></div>
