--- a/index.html
+++ b/index.html
@@ -69,11 +69,9 @@
                     <div>
                         <img id="zDisplayImg" src="images/white.svg" alt="zodiac button img">
                     </div>
-                    <p><span id="zTitle">Title</span></p>
-                    <p><span id="zDateRange">Date Range</span></p>
-                    <div id="zMoreInfo">
-                        <p>Description insert here!</p>
-                    </div>
+                    <p id="zTitle">Title</p>
+                    <p id="zDateRange">Date Range</p>
+                    <p id="zMoreInfo">Description insert here!</p>
                     <button id="btn-modal-close" class="toggle-modal">&times;</button>
                 </div>
             </div>
